...
            android:textSize="14sp" />

        <TextView
            android:id="@+id/running_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="러닝타임: 152분"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/book_button"
...
