<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_reservation_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.MovieDetailActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_reservation_detail_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toTopOf="@id/text_view_reservation_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_reservation_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="27dp"
                android:textAppearance="@style/Bold24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_reservation_detail_poster"
                tools:text="해리 포터와 마법사의 돌" />

            <TextView
                android:id="@+id/text_view_reservation_screening_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/text_view_reservation_detail_title"
                app:layout_constraintTop_toBottomOf="@id/text_view_reservation_detail_title"
                tools:text="상영일: 2024.3.1" />

            <TextView
                android:id="@+id/text_view_reservation_running_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/text_view_reservation_screening_date"
                app:layout_constraintTop_toBottomOf="@id/text_view_reservation_screening_date"
                tools:text="러닝타임: 152분" />

            <TextView
                android:id="@+id/text_view_reservation_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="21dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_view_reservation_running_time"
                app:layout_constraintTop_toBottomOf="@id/text_view_reservation_running_time"
                tools:text="《해리 포터와 마법사의 돌》은 2001년 J. K. 롤링의 동명 소설을 원작으로 하여 만든, 영국과 미국 합작, 판타지 영화이다. 해리포터 시리즈 영화 8부작 중 첫 번째에 해당하는 작품이다. 크리스 콜럼버스가 감독을 맡았다." />

            <Space
                android:layout_width="0dp"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_reservation_summary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spinner_reservation_detail_screening_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_reservation_detail_screening_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/spinner_reservation_detail_screening_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinner_reservation_detail_screening_date" />

        <Button
            android:id="@+id/button_reservation_detail_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reservation_detail_minus"
            android:textAppearance="@style/Bold20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_reservation_detail_screening_date" />

        <TextView
            android:id="@+id/text_view_reservation_detail_number_of_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_detail_default_ticket_count"
            android:textAppearance="@style/Bold20"
            app:layout_constraintBottom_toBottomOf="@id/button_reservation_detail_minus"
            app:layout_constraintEnd_toStartOf="@id/button_reservation_detail_plus"
            app:layout_constraintStart_toEndOf="@id/button_reservation_detail_minus"
            app:layout_constraintTop_toTopOf="@id/button_reservation_detail_minus" />

        <Button
            android:id="@+id/button_reservation_detail_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_detail_plus"
            android:textAppearance="@style/Bold20"
            app:layout_constraintBottom_toBottomOf="@id/button_reservation_detail_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_reservation_detail_minus" />

        <Button
            android:id="@+id/button_reservation_detail_finished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reservation_detail_finished_reservation"
            android:textAppearance="@style/Bold20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_reservation_detail_number_of_tickets" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>