...
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/item_movie_catalog_text_view_title"
        app:layout_constraintTop_toBottomOf="@id/item_movie_catalog_text_view_screening_date"
        tools:text="러닝타임: 152분" />

    <Button
        android:id="@+id/item_movie_catalog_button_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/movie_catalog_reservation_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
