<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_reservation_finished"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservation.ReservationFinishedActivity">

    <View
        android:id="@+id/view_reservation_finished"
...
